# NFIQ2

./: .astylerc  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE.md  Makefile  README.md  _config.yml  appveyor.yml  index.html  patch1  runCMake.ps1  runCMake.sh
NFIQ2/NFIQ2Algorithm/: CMakeLists.txt  Makefile  common.mk
NFIQ2/NFIQ2Algorithm/doc/: nfiq2.conf  nfiq2_refresh.1  nfiq2_refresh.1.md  nfiq2_refresh.conf  nfiq2_tool.1  nfiq2_tool.1.md  nfiq2_tool.conf  regenerate_manpage.sh  v22-to-v23.dox
NFIQ2/NFIQ2Algorithm/doc/assets/: footer.html  footer.sty  header.html  header.sty
NFIQ2/NFIQ2Algorithm/doc/html/: annotated.html  class_n_f_i_q2_1_1_algorithm-members.html  class_n_f_i_q2_1_1_algorithm.html  class_n_f_i_q2_1_1_data-members.html  class_n_f_i_q2_1_1_data.html  class_n_f_i_q2_1_1_exception-members.html  class_n_f_i_q2_1_1_exception.html  class_n_f_i_q2_1_1_fingerprint_image_data-members.html  class_n_f_i_q2_1_1_fingerprint_image_data.html  class_n_f_i_q2_1_1_model_info-members.html  class_n_f_i_q2_1_1_model_info.html  class_n_f_i_q2_1_1_timer-members.html  class_n_f_i_q2_1_1_timer.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  namespace_n_f_i_q2.html  namespace_n_f_i_q2_1_1_actionable_quality_feedback_identifier.html  namespace_n_f_i_q2_1_1_actionable_quality_feedback_threshold.html  namespace_n_f_i_q2_1_1_quality_features.html  namespace_n_f_i_q2_1_1_version.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  nfiq2_8hpp.html  nfiq2_8hpp_source.html  nfiq2__algorithm_8hpp.html  nfiq2__algorithm_8hpp_source.html  nfiq2__data_8hpp.html  nfiq2__data_8hpp_source.html  (+36 more)
NFIQ2/NFIQ2Algorithm/doc/latex/: annotated.tex  class_n_f_i_q2_1_1_algorithm.tex  class_n_f_i_q2_1_1_data.tex  class_n_f_i_q2_1_1_exception.tex  class_n_f_i_q2_1_1_fingerprint_image_data.tex  class_n_f_i_q2_1_1_model_info.tex  class_n_f_i_q2_1_1_timer.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  doxygen.sty  files.tex  hierarchy.tex  namespace_n_f_i_q2.tex  namespace_n_f_i_q2_1_1_actionable_quality_feedback_identifier.tex  namespace_n_f_i_q2_1_1_actionable_quality_feedback_threshold.tex  namespace_n_f_i_q2_1_1_quality_features.tex  namespace_n_f_i_q2_1_1_version.tex  nfiq2_8hpp.tex  nfiq2__algorithm_8hpp.tex  nfiq2__data_8hpp.tex  nfiq2__exception_8hpp.tex  nfiq2__fingerprintimagedata_8hpp.tex  nfiq2__interfacedefinitions_8hpp.tex  nfiq2__modelinfo_8hpp.tex  nfiq2__qualityfeatures_8hpp.tex  nfiq2__timer_8hpp.tex  nfiq2__version_8hpp.tex  refman.tex  struct_n_f_i_q2_1_1actionable__quality__feedback__t.tex  struct_n_f_i_q2_1_1comparison__probe__result__t.tex  struct_n_f_i_q2_1_1comparison__result__t.tex  struct_n_f_i_q2_1_1comparison__scores__sample__t.tex  struct_n_f_i_q2_1_1feature__data__t.tex  struct_n_f_i_q2_1_1feature__speed__t.tex  struct_n_f_i_q2_1_1image__id__t.tex  struct_n_f_i_q2_1_1quality__feature__result__t.tex  struct_n_f_i_q2_1_1quality__feature__sample__t.tex  struct_n_f_i_q2_1_1utility__result__t.tex  struct_n_f_i_q2_1_1utility__sample__t.tex
NFIQ2/NFIQ2Algorithm/include/: Data.h  FingerprintImageData.h  InterfaceDefinitions.h  NFIQ2Algorithm.h  NFIQException.h  OS.h  Timer.hpp  nfiq2.hpp  nfiq2_algorithm.hpp  nfiq2_constants.hpp  nfiq2_data.hpp  nfiq2_exception.hpp  nfiq2_fingerprintimagedata.hpp  nfiq2_interfacedefinitions.hpp  nfiq2_modelinfo.hpp  nfiq2_nfiq2algorithm.hpp  nfiq2_nfiqexception.hpp  nfiq2_qualityfeatures.hpp  nfiq2_qualitymeasures.hpp  nfiq2_results.hpp  nfiq2_timer.hpp  nfiq2_version.h  nfiq2_version.hpp
NFIQ2/NFIQ2Algorithm/include/features/: BaseFeature.h  FDAFeature.h  FJFXMinutiaeQualityFeatures.h  FeatureFunctions.h  FingerJetFXFeature.h  ImgProcROIFeature.h  LCSFeature.h  Module.h  MuFeature.h  OCLHistogramFeature.h  OFFeature.h  QualityMapFeatures.h  RVUPHistogramFeature.h
NFIQ2/NFIQ2Algorithm/include/nfiq2/: Data.h  FingerprintImageData.h  InterfaceDefinitions.h  NFIQ2Algorithm.h  data.h  data.hpp  fingerprintimagedata.h  fingerprintimagedata.hpp  interfacedefinitions.h  interfacedefinitions.hpp  modelinfo.hpp  nfiq2.h  nfiq2.hpp  nfiq2_qualityfeatures.hpp  nfiq2_results.hpp  nfiq2features.hpp  nfiqexception.hpp  timer.hpp  version.hpp
NFIQ2/NFIQ2Algorithm/include/prediction/: RandomForestML.h
NFIQ2/NFIQ2Algorithm/include/quality_modules/: FDA.h  FDAFeature.h  FingerJetFX.h  Mu.h  (+18 more)
NFIQ2/NFIQ2Algorithm/src/: Data.cpp  Data.d  FingerprintImageData.cpp  FingerprintImageData.d  NFIQ2.cpp  NFIQ2.d  NFIQ2Algorithm.cpp  NFIQ2Algorithm.d  NFIQ2AlgorithmImpl.cpp  NFIQ2AlgorithmImpl.h  NFIQException.cpp  NFIQException.d  nfiq2_version.cpp.in
NFIQ2/NFIQ2Api/: CMakeLists.txt  main.cpp  nfiq2api.cpp  nfiq2api.def  nfiq2api.h  version.cpp.in  version.rc.in
biomdi/: CMakeLists.txt  Makefile  README
biomdi/common/: Makefile  common.mk
biomdi/common/src/: Makefile  common.mk
biomdi/facerecognition/: Makefile
biomdi/facerecognition/src/: Makefile
biomdi/fingerimage/: Makefile  README
biomdi/fingerimage/src/: Makefile  common.mk
biomdi/fingerminutia/: Makefile  README  fingerminutia.vcproj  fingerminutia.vcxproj  fingerminutia.vcxproj.filters
biomdi/fingerminutia/man/: fmroverlap.1  fmrprune.1  fmrsort.1  fmrv.1  minexv.1  mkfmr.1  prfmr.1
biomdi/fingerminutia/src/: Makefile  common.mk
biomdi/irisimage/src/: Makefile  common.mk
biomdi/windows/sys/: queue.h
examples/: CMakeLists.txt  README.md  example_api.cpp  print_feature_names.cpp  print_native_quality_measure_names.cpp
examples/images/: SFinGe_Test01.pgm  SFinGe_Test02.pgm  SFinGe_Test03.pgm  SFinGe_Test04.pgm  SFinGe_Test05.pgm
examples/output/: SFinGe_Test01_output.txt  SFinGe_Test02_output.txt  SFinGe_Test03_output.txt  SFinGe_Test04_output.txt  SFinGe_Test05_output.txt
fingerjetfxose/: CMakeLists.txt  nfiq2.patch
opencv/: CMakeLists.txt  readme.txt
(+1230 files in other folders)
